# model_provenance_code

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
configs/experiments/: mimir_github_pythia_min_k.yaml
docs/notes/: phase3_threshold_distinguisher_report.md  vit_experiments_summary.md
scripts/data/: prepare_imagenet_shard.py  prepare_mimir_github.py  prepare_mimir_github_nonmember_control.py
scripts/experiments/: run_mia_experiment.py  sweep_m_imagenet_shard.py
scripts/local_scripts/: install_pace.sh
scripts/reports/: compare_parent_target_advantage.py  report_nonmember_control.py
scripts/scoring/: extract_image_scores.py  extract_image_scores_aug.py  extract_logprob_scores.py
scripts/setup/: check_env.py  setup_local_env.sh
src/: __init__.py
src/apis/: __init__.py
src/dpsda/: __init__.py
src/shard_audit/: __init__.py  datasets.py  distinguishers.py  logprobs.py  metrics.py  mia_scores.py  preprocessing.py  reporting.py  sanity_checks.py  splitting.py  vit_scores.py
src/utility_eval/: __init__.py
